--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,12 +1,25 @@
 {
   "name": "postiz-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Postiz backend API (NestJS)",
   "scripts": {
-    "dev": "dotenv -e ../../.env -- nest start --watch --entryFile=./apps/backend/src/main",
-    "build": "cross-env NODE_ENV=production nest build",
-    "start": "dotenv -e ../../.env -- node --experimental-require-module ./dist/apps/backend/src/main.js",
-    "pm2": "pm2 start pnpm --name backend -- start"
+    "dev": "nest start --watch",
+    "build": "nest build",
+    "start": "node dist/main.js",
+    "start:prod": "node dist/main.js"
+  },
+  "dependencies": {
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0"
+  },
+  "devDependencies": {
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
+    "typescript": "^5.3.0"
   },
   "keywords": [],
   "author": "",
