--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Postiz backend API (NestJS)",
   "scripts": {
-    "dev": "nest start --watch",
-    "build": "cross-env NODE_ENV=production nest build apps/backend",
-    "start": "node dist/apps/backend/src/main.js",
-    "start:prod": "node dist/main.js"
-  },
+  "dev": "nest start --watch",
+  "build": "cross-env NODE_ENV=production nest build apps/backend --path apps/backend/tsconfig.build.json",
+  "start": "node dist/apps/backend/main.js",
+  "start:prod": "node dist/apps/backend/main.js"
+},
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
