--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -1,15 +1,9 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "dist/apps/backend/src/main.js",
-      "use": "@vercel/node"
-    }
+    { "src": "dist/apps/backend/main.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "dist/apps/backend/src/main.js"
-    }
+    { "src": "/(.*)", "dest": "dist/apps/backend/main.js" }
   ]
 }
