--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Postiz backend API (NestJS)",
   "scripts": {
   "dev": "nest start --watch",
-  "build": "NODE_OPTIONS='--max-old-space-size=512' nest build --path tsconfig.build.json",
+  "build": "nest build --path tsconfig.build.json",
   "start": "node dist/src/main.js",
   "start:prod": "node dist/src/main.js"
 },
