Update build script in package.json

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Postiz backend API (NestJS)",
   "scripts": {
   "dev": "nest start --watch",
-  "build": "nest build --path tsconfig.build.json",
+  "build": "tsc --project tsconfig.build.json --skipLibCheck --noEmitOnError false",
   "start": "node dist/src/main.js",
   "start:prod": "node dist/src/main.js"
 },
