--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,8 +4,8 @@
   "description": "Postiz backend API (NestJS)",
   "scripts": {
   "dev": "nest start --watch",
-  "build": "nest build --path tsconfig.build.json",
-  "start": "node dist/src/main.js",
+  "build": "nest build apps/backend --path apps/backend/tsconfig.build.json",
+  "start": "node dist/apps/backend/main.js",
   "start:prod": "node dist/src/main.js"
 },
   "dependencies": {
